--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,8 +39,8 @@ javac.deprecation=false
 javac.external.vm=true
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.8
-javac.target=1.8
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -61,7 +61,7 @@ main.class=jmetal.experiments.studies.Weips2DStudy
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.7
 project.jMetal-4_5=../../Frameworks/jMetal-4.5
 reference.jMetal-4_5.jar=${project.jMetal-4_5}/dist/jMetal-4.5.jar
 run.classpath=\
