Adjust to load the jMetal lib from a jar

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,10 +29,11 @@ dist.jar=${dist.dir}/jMetalWeips.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jMetal-4.5.jar=lib/jMetal-4.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.jMetal-4_5.jar}
+    ${file.reference.jMetal-4.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,8 +63,6 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=JDK_1.7
-project.jMetal-4_5=../../Frameworks/jMetal-4.5
-reference.jMetal-4_5.jar=${project.jMetal-4_5}/dist/jMetal-4.5.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
